istio/chart/templates/monitoring/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
  - "grafana.local"
  gateways:
  - istio-system/monitoring-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-grafana
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  hosts:
  - "prometheus.local"
  gateways:
  - istio-system/monitoring-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  hosts:
  - "alertmanager.local"
  gateways:
  - istio-system/monitoring-gateway
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-alertmanager
        port:
          number: 9093
